crates/tui/src/snapshots/tui__settings_view__tests__settings_editing.snap
---
source: crates/tui/src/settings_view_tests.rs
expression: "drawn(&settings, None, 80, 24)"
---
Settings                                                                       ✕
diagnostics.level                  "info"  default
handoff.tokens                     400000  default
model                              "a/b"  global
providers.openai.credentials.work  command op  global
repository_extensions              unset  default
skills.disabled                    a (global), b (project)  global + project
tui.hover                          true  default
tui.theme                          unset  default












handoff.tokens, written to the project file:
> 400000
Tab layer · Enter save · Esc cancel
